<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home"
            android:visible="true"
            app:showAsAction="withText" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@mipmap/ic_event_black_24dp"
            android:title="@string/appointment"
            android:visible="true"
            app:showAsAction="withText" />
        <item
            android:id="@+id/nav_about_doctor"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/doctor_info" />
        <item
            android:id="@+id/nav_health_tips"
            android:icon="@mipmap/ic_content_paste_black_24dp"
            android:title="@string/health_tips" />
        <item
            android:id="@+id/nav_review"
            android:icon="@mipmap/ic_create_black_24dp"
            android:title="@string/reviews" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/contactus" />
    </group>

</menu>
