<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appointment_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:lineSpacingExtra="10sp"
        android:paddingTop="5dp"
        android:text="@string/appointmentDetails"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appointment_text2"
        android:layout_marginTop="14dp"
        android:layout_marginStart="15dp"
        android:singleLine="true"
        android:text="@string/patientName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark"
        android:visibility="visible" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/p_name"
        android:layout_below="@+id/p_name"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/p_age"
        android:layout_below="@+id/p_age"
        android:text="@string/patientPhone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p_mobile"
        android:layout_marginStart="15dp"
        android:text="@string/patientEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p_email"
        android:text="@string/selectedTime"
        android:layout_marginStart="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark"
        android:visibility="visible" />

    <EditText
        android:id="@+id/p_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="dd/MM/yyy 00-00AM"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_dark"
        android:textStyle="italic"
        android:visibility="visible" />

    <EditText
        android:id="@+id/p_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/patientName_hint"
        android:inputType="text|textMultiLine" />

    <EditText
        android:id="@+id/p_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number" />
    <EditText
        android:id="@+id/p_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/patientPhone_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/p_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/patientEmail_hint"
        android:inputType="textEmailAddress|time" />

    <Button
        android:id="@+id/p_time_btn"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/p_email"
        android:layout_alignTop="@+id/p_time"
        android:background="@drawable/date_button"
        android:onClick="showDatePickerDialog"
        android:text="@string/selectDate"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/appointment_submit"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/appointment_button"
        android:padding="10dp"
        android:text="@string/bookAppointment"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />


</RelativeLayout>