<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="30dp"
        android:text="@string/appointment_success_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp" />



    <TextView
        android:id="@+id/apt_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/confirmationNumberText"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apt_confirmation"
        android:layout_alignBottom="@+id/apt_confirmation"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/apt_confirmation"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/apt_confirmation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_val"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/confirmationName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apt_confirmation_age"
        android:layout_alignStart="@+id/apt_confirmation_val"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/apt_confirmation_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_name"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/confirmationAge"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_age_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apt_confirmation_phone"
        android:layout_alignStart="@+id/apt_confirmation_name_val"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/apt_confirmation_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_age"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/confirmationPhone"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_phone_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/apt_confirmation_phone"
        android:layout_alignStart="@+id/apt_confirmation_age_val"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/apt_confirmation_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_phone"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/patientEmail"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_email_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apt_confirmation_time"
        android:layout_alignStart="@+id/apt_confirmation_phone_val"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/apt_confirmation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_email"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/selectedAppTime"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/apt_confirmation_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apt_confirmation_time"
        android:layout_alignBottom="@+id/apt_confirmation_time"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/apt_confirmation_time"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/hospital_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apt_confirmation_time"
        android:layout_marginTop="43dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/confirmation_address_label"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/hospital_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hospital_address_label"
        android:layout_alignBottom="@+id/hospital_address_label"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/hospital_address_label"
        android:paddingLeft="5dp"
        android:text="@string/confirmation_address"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />
</RelativeLayout>