<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="@string/selectTime" />

    <TextView
        android:id="@+id/appointment_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar2"
        android:text="@string/select_time_desc"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appointment_text2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_item_divider"
        android:dropDownWidth="match_parent"
        android:padding="5dp"
        android:popupBackground="@drawable/spinner_item_divider" />

    <Button
        android:id="@+id/selected_time_btn"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointment_text2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/appointment_button"
        android:padding="15dp"
        android:text="@string/timeBtn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:visibility="visible" />

</RelativeLayout>